--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .App {
   text-align: center;
+  background-color: #323232;
+  padding: 10px;
+  min-height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+h1 {
+  text-align: center;
+  color: #dfff;
 }
 
 @media (prefers-reduced-motion: no-preference) {
